fixed the image distortions.corrected the images size for a better view. data validation is given to display the graphs.

--- a/src/lab/exp1/expt1/mas_expt1.css
+++ b/src/lab/exp1/expt1/mas_expt1.css
@@ -1,26 +1,25 @@
-html {
-overflow-y: scroll;
-overflow-x: scroll;
-}
-
 body{
     width:1080px; 
     height:715px; 
     margin: 0 auto; 
-   /* overflow: hidden;*/
+    overflow: hidden;
     position: relative;
 }
 
-h4{   /*its not mandatory as the row is used*/
+h3{  
     text-align: center;
+    font-weight: bold;
+    font-family: "Times New Roman", Times, serif;
+}
+
+#reset_btn{
+    margin: auto;
+    display: block;
 }
 
 #manual_button, #data_button{
-    /*background-color: Transparent; 
-    border : none; */
     position:absolute; 
     left: 30px;
-    /*float: left;*/
     cursor: pointer;
 }
 
@@ -98,51 +97,51 @@ h4{   /*its not mandatory as the row is used*/
     }
 
 #apparatus{
-   /* position: relative;*/
     float:right;
 }
 
 #solution{
     position:absolute;
-    z-index:1099; 
+    z-index:1; 
     left:8%; 
     top:5%;
 }
 
 #flask{
     position:absolute;
-    z-index:999; 
+    z-index:1; 
     width:8%; 
     left:13%; 
     top:30%; 
-    cursor:pointer;
 }
 
 #pipette{
     position:absolute;
-    z-index:999; 
+    z-index:2; 
     width:7%; 
     left:36%; 
     top:27%;  
-    cursor:pointer;
 }
 
 #beaker{
     position:absolute;
-    z-index:800; 
+    z-index:1; 
     width:11%; 
     left:55%; 
     top:27%;  
-    cursor:pointer;
 }
 
 #cuvette{
     position:absolute;
-    z-index:898; 
+    z-index:2; 
     width:2.5%; 
     left:80%; 
     top:48%; 
-    cursor:pointer;
+}
+
+#table_with_spec{
+    margin:auto;
+    display: block;
 }
 
 #computerimage{
@@ -155,55 +154,46 @@ h4{   /*its not mandatory as the row is used*/
 
 #comp_trans_button{
     position: absolute; 
-    z-index: 999; 
+    z-index: 1; 
     width: 12%;
     height: 26%; 
     left: 49%;
     top: 15%; 
-    cursor: pointer;
 }
 
 #spectrolid_trans_button{
     position: absolute; 
-    z-index:2;
+    z-index:1;
     width: 5%; 
     height: 18%;
     left: 35%; 
     top: 20%;  
-    cursor: pointer;
 }
 
 #reference{
     position: absolute; 
-    z-index: 898; 
     width: 15%; 
-    left: 40%; 
-    top: 0%; 
-    cursor: pointer;
+    left: 56%; 
+    top: -6%; 
     visibility: hidden;
 }
 
 #ref_cuvette{
     position: absolute; 
-    z-index: 899; 
+    z-index: -1; 
     width: 1.4%; 
-    left: 37.35%; 
-    top: 10%; 
-    cursor: pointer;
+    left: 54.35%; 
+    top: 2%; 
 }
 
 #power_trans_button{
-    background-color: Transparent; 
-    background-repeat: no-repeat; 
-    border: none; 
-    cursor: pointer; 
-    overflow: hidden; 
     position: absolute; 
-    z-index:2;
+    z-index:1;
     left: 17.5%; 
     top: 45%;
     width: 3%;
     height: 6%;
+    cursor: pointer;
 }
 
 #demo{
@@ -220,7 +210,7 @@ h4{   /*its not mandatory as the row is used*/
     top:75px; 
     left:0px;
     visibility:hidden; 
-    z-index:1100;
+    z-index:3;
 }
 
 #clockHand{
@@ -228,20 +218,20 @@ h4{   /*its not mandatory as the row is used*/
     top:314px;
     left:50.75%; 
     visibility:hidden; 
-    z-index:1102;
+    z-index:4;
 }
 
 #scan{
     position:absolute;
-    z-index:1100; 
+    z-index:5; 
     top:65px; 
     left:15px;
     visibility:hidden;
 }
 
-#scan_graph{
+#input_data{
     position:absolute;
-    z-index:1200;
+    z-index:6;
     top:18%;
     left:1%;
     width: 100%; 
@@ -250,18 +240,17 @@ h4{   /*its not mandatory as the row is used*/
 
 #start_btn{
     position: absolute;
-    z-index: 1200;
+    z-index: 6;
     top: 23%;
     left: 50%;
     width: 3%;
     height: 5%;
     visibility : hidden;
-    cursor: pointer;
 }
 
 #input1{
     position: absolute;
-    z-index: 1200;
+    z-index: 6;
     top: 55%;
     left: 22%;
     width: 7%;
@@ -271,7 +260,7 @@ h4{   /*its not mandatory as the row is used*/
 
 #input2{
     position: absolute;
-    z-index: 1200;
+    z-index: 6;
     top: 55%;
     left: 34%;
     width: 7%;
@@ -281,7 +270,7 @@ h4{   /*its not mandatory as the row is used*/
 
 #instruction_bkgd{
     position: absolute;
-    z-index: 1350;
+    z-index: 11;
     top: 87%;
     left: 7%;
     width: 90%;
@@ -290,7 +279,7 @@ h4{   /*its not mandatory as the row is used*/
 
 #graph_instruction{
     position: absolute;
-    z-index: 1351;
+    z-index: 12;
     top: 87%;
     left: 11%;
     color: white;
@@ -299,31 +288,21 @@ h4{   /*its not mandatory as the row is used*/
     font-size: 15px;
 }
 
-#graph1{
+.video{
     position: absolute;
-    z-index: 1300;
+    z-index: 10;
     top: 24%;
     left: 7%;
     width: 90%;
     visibility : hidden;
 }
 
-#graph2{
-    position: absolute;
-    z-index: 1300;
-    top: 24%;
-    left: 7%;        
-    width: 90%;
-    visibility : hidden;
-}
-
 #disposegraph{
     position: absolute;
-    z-index: 1350;
+    z-index: 13;
     width: 9%;
     left: 88%;
     top: 565px;
-    cursor: pointer;
     height: 3%;
 }
 
